--- a/responziv.css
+++ b/responziv.css
@@ -1,7 +1,6 @@
 #doboz{
-    background-color: bisque;
     width: 94%;
-    height: 500px;
+    height: 800px;
     margin-left: 40px;
     margin-top: 40px;
     display: flex;
@@ -37,7 +36,7 @@
 #blue{
     background-color:royalblue;
     width: 150px;
-    height: 400px;
+    height: 700px;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -52,8 +51,8 @@
 
 #green{
     background-color: green;
-    width: 1100px;
-    height: 400px;
+    width: 1650px;
+    height: 700px;
     margin-left: 20px;
     align-items: center;
     display: flex;
@@ -65,7 +64,13 @@
 }
 
 #kep{
-    background-color: lightgray;
+    background-color: darkgray;
     width: 500px;
-    height: 201px;
+    height: 250px;
+    margin: auto;
+}
+
+img {
+    width: 500px;
+    height: 250px;
 }
