--- a/html/myCounter/Counter.css
+++ b/html/myCounter/Counter.css
@@ -17,3 +17,14 @@ body{
     padding: 10px;
     font-size:larger;
 }
+
+#count{
+    margin: auto;
+    text-align: center;
+    width: 500px;
+    height: 300px;
+}
+
+table, th, tr{
+    border: black solid 1px;
+}
