--- a/html/myCounter/Counter.css
+++ b/html/myCounter/Counter.css
@@ -1,30 +1,53 @@
-*{
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f3e9f5;
     margin: 0;
-    padding: 0;
-}
-
-body{
-    background-color:rgba(241, 231, 254, 0.7);
-}
-
-#fejlec{
-    width: 100%;
-    height: 50px;
-    background-color:rgba(213, 184, 255, 1);
-}
-
-#mycounter{
-    padding: 10px;
-    font-size:larger;
-}
-
-#count{
-    margin: auto;
     text-align: center;
-    width: 500px;
-    height: 300px;
 }
 
-table, th, tr{
-    border: black solid 1px;
+.header {
+    background-color: #c7a8e0;
+    padding: 15px;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: left;
+    padding-left: 15px;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+}
+
+.counter {
+    text-align: center;
+    margin: 0 40px;
+    margin-bottom: 200px;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+}
+
+.btn {
+    background-color: #dcc7f7;
+    border: none;
+    border-radius: 10px;
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
+    margin: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #c7a8e0;
 }
